[project]
name = "check-todos"
version = "0.1.0"
description = "Scan source code for TODO comments checking they have a task ID"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter",
]

[project.scripts]
check-todos = "check_todos.__main__:main"

[project.optional-dependencies]
html = ["tree-sitter-html"]
py = ["tree-sitter-python"]
toml = ["tree-sitter-toml"]
ts = ["tree-sitter-typescript"]
tsx = ["tree-sitter-typescript"]
yaml = ["tree-sitter-yaml"]
